--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
     "reactstrap": "^9.1.4",
+    "sweetalert2": "^11.4.34",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
